version=1.1.9
author=wb0sio
LastUpdate=2021/09/10

1.1.9 - 2021/09/10 - Added ZramSwap - Create a RAM based swap file to improve system response. 

1.1.8 - 2021/08/11 - Added JS8map - Display a map of calls seen by JS8Call 
		2021/08/22 - Moved RPiMonitor from always install to install from the menu
		2021/08/27 - Added X715 power supply hat utilities

1.1.7 - Added PiSafe - Backup or Restore Raspberry Pi devices

1.1.6 - Added Argon One m.2 case utilities
			Added FLSuite, KM4ACK and WB0SIO sub-menus to the HamRadio menu
			Added build Conky from source
			Added folder $HOME/Douments/adi_files
			Added symlinks for js8call and wsjtx adi files to $HOME/Douments/adi_files

1.1.5 - Added diskio and fortune to conky
			Added fortune installation option.
			Added xscreensaver install.
			Added Disk IO display to conky
			Added writegrid.sh to write the grid square to file $HOME/bin/conky/Grid.txt. Changed conky grid display to read the grid from $HOME/bin/conky/Grid.txt
			Added DeskPi utilities
			Added writefreq.sh and updated conky files with ${exec cat $HOME/bin/conky/Freq.txt}.  Added writefreq.sh to crontab.

1.1.4 - Updates to the updates.sh script

1.1.3 - Added set_wallpaper.sh
			Added second conky to display solar conditions gif

1.1.2 - Added set_default_res.sh
			Added solar conditions to conky
      
1.1.1 - Added Neofetch and CommanderPi
			Added conky-medium-adif

1.1.0 - Added gnome disk utility and Raspberry Pi Imager.

1.0.0 	Initial Release
				