@@ -29,7 +29,7 @@ TEMPFSTAB=${MYPATH}/fstab.tmp
 WHO=$(whoami)
 VERSION=$(cat ${MYPATH}/changelog | grep version= | sed 's/version=//')
 AUTHOR=$(cat ${MYPATH}/changelog | grep author= | sed 's/author=//')
-LASTUPDATE=$(cat ${MYPATH}/changelog | grep LastUpdate= | sed 's/LastUpdate=//')
+TODAY=$(date +%Y/%m/%d)
 
 FINISH(){
 if [ -f "${BASE}" ]; then
@@ -379,6 +379,9 @@ echo "${MYPATH}/.pscomplete" >> ${HOME}/pi-build/.complete
 rm ${BASE} > /dev/null 2>&1
 sudo rm -rf ${HOME}/pi-build/temp > /dev/null 2>&1
 sudo apt -y autoremove
+# Enter the installation date in ${HOME}/.config/WB0SIO
+echo "# The date pi-build-install.sh was executed" >> ${HOME}/.config/WB0SIO
+echo "InstallDate=$TODAY" >> ${HOME}/.config/WB0SIO
 
 #####################################
 #reboot when done
